added extra files big fixes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--  Favicon  -->
     <link rel = "icon" href = "images/vinyl.svg">
     <!-- Exteral CSS  -->
+    <link rel="stylesheet" href = "css/normalize.css">
     <link rel="stylesheet" href = "css/styles.css">
     <!-- Add icon library -->
     <link href="css/all.css" rel="stylesheet"> <!--load all styles -->
@@ -31,9 +32,13 @@
                 <h3 class = "part2"> & Solution's</h3>
                 <p class = "tag-line">Grow you business & boost up sale with astro.</p>
             </div>
-            <button class="btn btn-lg more-about-us">MORE ABOUT US &rarr;</button>
+            <div class="btn-cont">
+                <button class="btn btn-sm more-about-us">MORE ABOUT US &rarr;</button>
+            </div>
         </div>
-        <button class = "btn btn-lg Explore">EXPLORE MORE &rarr;</button>
+        <div class="btn-cont">
+            <button class = "btn btn-lg Explore">EXPLORE MORE &rarr;</button>
+        </div>
         <div class = "sidebar">
             <a href = "https://www.facebook.com/atharva.joshi.3975/" target = "_blank"><i class="s-icon fab fa-facebook-f"></i></a>
             <a href = "https://twitter.com/arjrocks2001" target = "_blank"><i class="s-icon fab fa-twitter"></i></a>
@@ -256,6 +261,7 @@
                 <p class = "contact-sub">Call us for immediate support on this number</p>
                 <h5 class = "num">880 1723 801 29</h5>
             </div>
+        </div>
     </section>
     <!--------------------------------------------------- Container 9 starts -------------------------------------------------------->
     <section id="contact-us">
@@ -274,7 +280,7 @@
             <table class = "feature-table" cellspacing = 20px>
                 <tr>
                     <td>
-                        <table cellspacing = 50px>
+                        <table cellspacing = 10px>
                             <th class = "table-heading">Services</th>
                             <tr>
                                 <td>Web Design</td>
@@ -293,25 +299,28 @@
                             </tr>
                         </table>
                     </td>
-                    <table class = "feature-table" cellspacing = 50px>
+                </tr>
+            </table>
+            <table class = "feature-table" cellspacing = 20px>
+                <tr>
                     <td>
                         <table padding = 2rem cellspacing = 10px>
                             <th class = "table-heading">About Us</th>
-                        <tr>
-                            <td>About Us</td>
-                        </tr>
-                        <tr>
-                            <td>Work Portfolio</td>
-                        </tr>
-                        <tr>
-                            <td>Team</td>
-                        </tr>
-                        <tr>
-                            <td>Plan & Pricing</td>
-                        </tr>
-                        <tr>
-                            <td>News</td>
-                        </tr>
+                            <tr>
+                                <td>About Us</td>
+                            </tr>
+                            <tr>
+                                <td>Work Portfolio</td>
+                            </tr>
+                            <tr>
+                                <td>Team</td>
+                            </tr>
+                            <tr>
+                                <td>Plan & Pricing</td>
+                            </tr>
+                            <tr>
+                                <td>News</td>
+                            </tr>
                         </table>
                     </td>
                 </tr>
